# investintell-light

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: .dockerignore  .railwayignore  Dockerfile  _gate_vs_full_backtest.py  alembic.ini  openapi.json  pyproject.toml  railway.api.toml  railway.enrich-sectors.toml  railway.proxy-etf.toml  railway.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: backfill_13f_filings.py  backfill_reveal_artifacts.py  backfill_sector_proxy_eod.py  backfill_sp500_constituents.py  backfill_sp500_index_weights.py  backfill_universe_eod.py  compute_screener_metrics.py  enrich_sectors.py  evaluate_rebalance.py  export_openapi.py  group_c_function_perf.py  ingest_nport_fund_var_info.py  ncen_adviser_analyze.py  ncen_adviser_ingest.py  ncen_coverage_check.py  populate_manager_score_from_legacy.py  refresh_proxy_etf_eod.py  refresh_universe_sectors_job.sql  smoke.py  sync_funds.py  sync_universe.py  verify_open_macro_v03_runtime_skeleton.py  verify_quant_engine_contract.py
backend/seeds/: sec_company_tickers_20260611.json
backend/tests/: conftest.py  test_active_share_db_first.py  test_aligned_helper.py  test_analytics_absorption.py  test_analytics_active_share.py  test_analytics_benchmark_composite.py  test_analytics_cvar_annualization.py  test_analytics_distribution.py  test_analytics_expense_ratio.py  test_analytics_manual_validation.py  test_analytics_monte_carlo.py  test_auth.py  (+175 more)
(+674 files in other folders)
